# Brisk

./: .build.sh.swp  .gitignore  Brisk.sln  CMakeLists.txt  README.md  build.sh  premake5.lua
Brisk/: CMakeLists.txt  premake5.lua
Brisk/include/glad/glad/: glad.h
Brisk/include/stb/: stb_image.h
Brisk/include/tinygltf/: tiny_gltf.h
Brisk/src/: Brisk.h  CMakeLists.txt
Brisk/src/Core/: Application.cpp  Application.h  Input.h  Keys.h  Layer.h  Log.cpp  Log.h  Window.cpp  Window.h
Brisk/src/Event/: Event.cpp  Event.h  KeyboardEvent.h  MouseEvent.h  WindowResizeEvent.h
Brisk/src/Platform/: LinuxWindow.cpp  LinuxWindow.h
Brisk/src/Renderer/: IndexBuffer.cpp  IndexBuffer.h  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Shapes.h  Texture.cpp  Texture.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
Brisk/src/Scene/: Entity.cpp  Entity.h  Material.h  WorldObject.cpp  WorldObject.h
Brisk/src/Util/: FileHandler.cpp  FileHandler.h  GLTFLoader.cpp  GLTFLoader.h  Log.h
Sandbox/: CMakeLists.txt  premake5.lua
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.h  SandboxApp.cpp  main.cpp
assets/models/: Cube.glb  Cube.gltf
assets/shaders/: fragment.frag  lightsource.frag  vertex.vert
shaders/: fragment.frag  vertex.vert
src/: CMakeLists.txt  FileHandler.cpp  IndexBuffer.cpp  IndexBuffer.h  ShaderProgram.cpp  ShaderProgram.h  Structures.h  Texture.cpp  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
src/Asset/: Model.h
src/Core/: main.cpp
src/Renderer/: CMakeLists.txt  IndexBuffer.h  Mesh.cpp  Mesh.h  ShaderProgram.h  Texture.h  VertexBufferLayout.h
src/Util/: CMakeLists.txt  FileHandler.h
